# TutorBot

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  idea.md  package-lock.json  package.json  pyproject.toml
.superpowers/sdd/: task-12-report.md  task-13-report.md  task-14-report.md  task-15-report.md  task-3-report.md  task-9-report.md
backend/scripts/: probe_embedder.py
backend/tests/: conftest.py
backend/tests/agents/: test_call_llm_retry_transient.py  test_call_llm_with_retry.py  test_exception_source_redaction.py  test_failure_redaction.py
backend/tests/api/: test_demo_endpoints.py  test_exercises_router.py  test_health_runtime.py  test_kb_endpoints_protocol.py  test_learning_events_teacher.py  test_learning_lifespan.py  test_learning_router.py  test_plan_intent_validation.py  test_profile_learning_loop.py  test_resources_artifact_endpoint.py  test_unified_ws_identity.py  test_video_render_retry.py
backend/tests/capabilities/: test_assessment_capability.py  test_capability_exception_source_redaction.py  test_path_planning_capability.py  test_pedagogy_token_caps.py  test_ppt_artifact_portability.py  test_profile_capability.py  test_resource_generation_capability.py  test_resource_generation_failed_filter.py  test_resource_mindmap_ppt_isolation.py  test_tutoring_capability.py  test_tutoring_dialogue_ingest.py  test_tutoring_uses_retrieval_service.py  test_video_render_fire_and_forget.py  test_video_render_follow_up.py
backend/tests/core/: test_capability_result.py  test_redaction.py  test_stream_bus_close_race.py  test_stream_bus_resource_event.py  test_stream_bus_stage_context.py
backend/tests/e2e/: test_demo_scenarios.py  test_rag_end_to_end.py  test_restart_stability.py
backend/tests/integration/: test_conversational_profile.py  test_learning_loop.py  test_local_validation_follow_up.py
backend/tests/runtime/: test_workflow_graph.py
backend/tests/tools/: test_mcp_web_search_tool.py
backend/tutor/: __init__.py  __main__.py
backend/tutor/agents/: __init__.py  base_agent.py
backend/tutor/api/: __init__.py  main.py  run_server.py
backend/tutor/capabilities/: __init__.py  assessment.py  failure_reporting.py  (+4 more)
docs/: agents.md  ai-coding-disclosure.md  architecture.md  brand-spec.md  demo-guide.md  demo-script.md  deployment-guide.md  integration-spec.md  knowledge-base.md  open-source-compliance.md  privacy-and-safety.md  rag-evaluation-computer-network.md  requirements-analysis.md  test-report.md
docs/operations/: local-data-migration.md
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page-terminal-state.test.tsx  page.test.tsx  page.tsx
frontend/e2e/: reliability.spec.ts
frontend/hooks/: useExerciseResponses.test.tsx  useExerciseResponses.ts  useJobQueue.test.tsx  useJobQueue.ts  useKG.ts  useLearningPath.test.tsx  useLearningPath.ts  useProfile.test.tsx  useProfile.ts  useResourceHistory.ts  useWebSocket.ts
frontend/lib/: api.test.ts  api.ts  detail-pane-width.test.ts  detail-pane-width.ts  errors.ts  event-handler-persistence.test.ts  event-handler.test.ts  event-handler.ts  format-time.test.ts  format-time.ts  job-reducer-stage-lifecycle.test.ts  job-reducer.test.ts  job-reducer.ts  learning-state.test.ts  learning-state.ts  resource-validation.test.ts  resource-validation.ts  store.test.ts  store.ts  store.tutor-hydration.test.ts  task-process.test.ts  task-process.ts  theme-color.test.ts  theme-color.ts  types.ts  utils.ts  workflow-snapshot.test.ts  workflow-snapshot.ts  ws.ts
frontend/test/: setup.ts
scripts/: evaluate_computer_network_rag.py  generate-competition-ppt.mjs  start-dev.ps1  stop-dev.ps1
submission/: TutorBot-A3-competition-deck.pptx  demo-video-script.md  tutorbot-a3-presentation.json
(+378 files in other folders)
