[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorbot"
version = "0.1.0"
description = "TutorBot — 个性化学习资源生成多智能体系统 / Personalized learning resource generation multi-agent system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Tian Mingyu", email = "tmy0388@qq.com" },
]
keywords = ["education", "multi-agent", "llm", "personalized-learning", "manim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    # RAG
    "llama-index>=0.14.12",
    "llama-index-core>=0.14.12",
    # Office / Documents
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.26.0",
    # Data
    "pydantic>=2.0.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    # Networking
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Markdown / Code execution
    "markdown>=3.6",
    "pygments>=2.18.0",
    # Common scientific libs used by CodeSandbox examples (matplotlib /
    # numpy / pandas). The code-sandbox subprocess runs in the same
    # interpreter as the backend, so generated snippets that import
    # them need them to actually be installed. Bundle the trio so
    # generated examples actually run.
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    # Utilities
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "loguru>=0.7.3",
    "rich>=13.0.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]
manim = [
    "manim>=0.19.0",
]
cli = [
    "typer[all]>=0.9.0",
    "prompt_toolkit>=3.0.36",
]
all = [
    "tutor[dev,manim,cli]",
]

[project.urls]
Homepage = "https://github.com/yourname/TutorBot"
Documentation = "https://github.com/yourname/TutorBot/blob/main/docs/architecture.md"
Repository = "https://github.com/yourname/TutorBot"

[project.scripts]
tutor = "tutor.cli.main:app"

# ---------------------------------------------------------------------------
# Setuptools configuration
# ---------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend"]
include = ["tutor*"]
exclude = ["tests*", "frontend*"]

[tool.setuptools.package-data]
tutor = [
    "knowledge_base/**/*",
    "prompts/**/*.yaml",
    "prompts/**/*.yml",
    "py.typed",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
